--- a/src/main/resources/templates/admin/managers/managers.html
+++ b/src/main/resources/templates/admin/managers/managers.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Table Example</title>
 
 <link rel="stylesheet" href="/admin/members/css/members.css" />
 <link rel="stylesheet" href="/admin/managers/css/managers.css" />
@@ -13,8 +10,7 @@
 <!-- DataPicker -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
-</head>
-<body>
+<div>
 	<div class="filter-container white-frame">
 		<div class="header">
 			<h1 class="search-list-title">매니저 목록 조회</h1>
@@ -115,5 +111,5 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 	<script src="/admin/managers/js/managers.js"></script>
-</body>
+</div>
 </html>
