--- a/src/main/resources/templates/admin/members/memberDetails.html
+++ b/src/main/resources/templates/admin/members/memberDetails.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Member Details</title>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/admin/members/css/memberDetails.css" />
-</head>
-<body>
+<div>
 	<div class="white-frame">
 	<h1 class="search-list-title">회원정보수정</h1>
 	<hr>
@@ -118,5 +114,5 @@
 	    });
 	}
 	</script>
-</body>
+</div>
 </html>
