--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -130,7 +130,7 @@
           <a href="">입출고내역</a>
         </li>
         <li class="sub-menu-item" data-sub-menu-id="submenu8">
-          <a href="">창고재고조회</a>
+          <a href="/admin/index?path=/admin/warehouse/warehouse">창고재고조회</a>
         </li>
       </ul>
     </li>
