--- a/src/main/resources/templates/admin/warehouse/warehouse.html
+++ b/src/main/resources/templates/admin/warehouse/warehouse.html
@@ -3,19 +3,21 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/admin/members/css/members.css" />
-<!-- DataPicker -->
+<link rel="stylesheet" href="/admin/managers/css/managers.css" />
+<link rel="stylesheet" href="/admin/common/css/modal.css" />
+<link rel="stylesheet" href="/admin/warehouse/css/warehouse.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 <div>
 	<div class="filter-container white-frame">
 		<div class="header">
-			<h1 class="search-list-title">회원목록 조회</h1>
+			<h1 class="search-list-title">창고재고조회</h1>
 		</div>
 
 		<div class="content">
 			<div class="search-filter">
 				<div class="filter-group">
-					<span class="search-list-subject">가입일</span>
+					<span class="search-list-subject">발주일</span>
 					<div class="date-picker">
 						<div class="input-date-box">
 							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
@@ -42,8 +44,8 @@
 				<div class="search-list-subject">검색어</div>
 				<div class="select-wrap">
 					<select id="searchColumn" class="select">
-						<option value="1">이름</option>
-						<option value="2">ID</option>
+						<option value="1">ISBN</option>
+						<option value="2">책제목</option>
 					</select>
 
 					<div class="select-arrow-down"></div>
@@ -62,28 +64,28 @@
 
 
 	<!-- 이곳에 내가 받을 값들의 컬럼을 적어준다 -->
-	<div class="table-container white-frame">
-		<span id="total-row" class="table-column-head-txt"></span>
-		<div><br></div>
-		<table id="member" class="table is-striped" style="width: 100%">
+	<div class="table-container white-frame">		
+		<table id="warehouse" class="table is-striped" style="width: 100%">
 			<thead>
 				<tr>
 					<th>NO</th>
-					<th>이름</th>
-					<th>ID</th>
-					<th>EMAIL</th>
-					<th>전화번호</th>
-					<th>가입날짜</th>
+					<th>ISBN</th>
+					<th>책제목</th>
+					<th>수량</th>
+					<th>입고날짜</th>
+					<th>구역번호</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
 		</table>
 	</div>
-
+	
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
+	
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="/admin/members/js/members.js"></script>
+	<script src="/admin/warehouse/js/warehouse.js"></script>
+	
 </div>
 </html>
