--- a/src/main/resources/templates/admin/inventory_log/inventoryLogList.html
+++ b/src/main/resources/templates/admin/inventory_log/inventoryLogList.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="www.thymeleaf.org">
-	
+
 	<!-- DatePicker -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-	<link rel="stylesheet" href="/admin/supplier_orders/css/list.css">
+	<link rel="stylesheet" href="/admin/inventory_log/css/list.css">
 	
     <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
-<div>
-
+    
 	<div class="filter-container white-frame">
 		<div class="header">
 			<h1 class="search-list-title">발주내역</h1>
@@ -18,7 +17,7 @@
 			<div class="content">
 				<div class="search-filter">
 					<div class="filter-group">
-						<span class="search-list-subject">발주일</span>
+						<span class="search-list-subject">조회기간</span>
 						<div class="date-picker">
 							<div class="input-date-box">
 								<input type="text" id="startDate" class="placeholder startDate"
@@ -44,13 +43,13 @@
 					<div class="search-list-subject">검색어</div>
 					<div class="select-wrap">
 						<select id="searchColumn" class="select">
-							<option value="order_num">발주번호</option>
+							<option value="log_transaction_num">입출고번호</option>
 						</select>
 						<div class="select-arrow-down"></div>
 					</div>
 					
 				    <div class="search-container">
-	      				<input type="number" name="word" id="word" class="searchKeyword search-input" placeholder="조회할 발주번호 입력" />
+	      				<input type="number" name="word" id="word" class="searchKeyword search-input" placeholder="조회할 입출고번호 입력" />
 	      				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
 	    			</div>
 				</div>
@@ -62,32 +61,33 @@
 	</div>
 	
 	<div class="table-container white-frame">
-		<span id="data-count" class="data-count"></span>
-		<button id="request-button" class="default-btn" onclick="location.href='/admin/supplierOrders/register'" style="float: right;">등록</button>
+		<div class="data-count-area">
+			<span id="data-count" class="data-count"></span>
+		</div>
 		<form id="table-form">
-			<table id="supplier-orders-table" class="table is-striped" style="width: 100%">
+			<table id="inventoryLog-orders-table" class="table is-striped" style="width: 100%">
 				<thead>
 					<tr>
 						<th>NO</th>
-						<th>발주번호</th>
-						<th>발주상태</th>
-						<th>총 수량</th>
-						<th>총 가격</th>
-						<th>발주날짜</th>
-						<th>발주자</th>
+						<th>입출고번호</th>
+						<th>입출고상태</th>
+						<th>작업날짜</th>
+						<th>작업자</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
 			</table>
 		</form>
-	</div>
-
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	</div>    
+    
+   	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="/admin/supplier_orders/js/list.js"></script>
+	<script src="/admin/inventory_log/js/list.js"></script>
 	<!-- DataTables JS -->
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
 	<!-- DataTables with Bulma integration JS -->
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
+<div>
+
 </div>
 </html>
