--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -444,7 +444,11 @@ input[type='number'] {
 	justify-content: center;
 	align-items: center;
 }
-
+#notice_wrapper>.dt-paging {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .essential::before {
     content: "*";
     color: red;
