--- a/src/main/resources/static/admin/reviews/css/reviews.css
+++ b/src/main/resources/static/admin/reviews/css/reviews.css
@@ -1,7 +1,3 @@
-table.dataTable tbody tr {
-    background-color: white !important;
-}
-
 
 .table-container {
    margin-top : 20px;
@@ -135,7 +131,10 @@ table.dataTable tbody tr {
    text-align: center;
    vertical-align: middle; 
 }
-
+#notice td, #notice th {
+	text-align: center;
+ 	vertical-align: middle; 
+}	
 /* Center the DataTable pagination controls */
 #reviews_wrapper>.dt-paging {
 	display: flex;
@@ -181,4 +180,17 @@ table td:not([align]) {
 	display: flex;
 	justify-content: center;
 	align-items: center; gap: 20px;
+}
+
+/* 공지사항 노출비노출 */ 
+.status-btn-wrap {
+	margin-left: 74px;
+}
+.selected-row {
+    background-color: #FAFAFA;
+}
+
+/* 테이블 짝수줄 배경 삭제 */
+.table.is-striped tbody tr:not(.is-selected):nth-child(2n) {
+	background-color: transparent;
 }
