--- a/src/main/resources/templates/admin/inquiries/inquiries.html
+++ b/src/main/resources/templates/admin/inquiries/inquiries.html
@@ -17,14 +17,12 @@
 					<span class="search-list-subject">작성일</span>
 					<div class="date-picker">
 						<div class="input-date-box">
-							<input type="text" id="startDate" class="placeholder"
-								placeholder="YYYY-MM-DD" />
-								<i class="fa-solid fa-calendar-days"></i>
+							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" />
+							<i class="fa-solid fa-calendar-days"></i>
 						</div>
 						<div class="calendar-slash">-</div>
 						<div class="input-date-box">
-							<input type="text" id="endDate" class="placeholder"
-								placeholder="YYYY-MM-DD" />
+							<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" />
 							<i class="fa-solid fa-calendar-days"></i>
 						</div>
 					</div>
