--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -154,7 +154,7 @@
           <a href="/admin/index?path=admin/banners/banners">배너관리</a>
         </li>
         <li class="sub-menu-item" data-sub-menu-id="submenu10">
-          <a href="">공지글관리</a>
+          <a href="/admin/index?path=admin/notice/notice">공지글관리</a>
         </li>
         <li class="sub-menu-item" data-sub-menu-id="submenu11">
           <a href="/admin/index?path=admin/reviews/reviews">리뷰조회</a>
