--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -83,7 +83,7 @@
 				<div class="btn-box">
 					<button type="submit" class="default-btn"
 						th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
-					<button type="button" class="default-btn cancle" onclick="location.href='/admin/index?path=admin/inquiries/inquiries'">취소</button>
+					<button type="button" class="default-btn cancel" onclick="location.href='/admin/index?path=admin/inquiries/inquiries'">취소</button>
 				</div>
 			</div>
 		</form>
