--- a/src/main/resources/templates/admin/notice/notice.html
+++ b/src/main/resources/templates/admin/notice/notice.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-	<!-- DataPicker -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 	<link rel="stylesheet" href="/admin/common/css/modal.css">
-
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <div>
 	<div class="filter-container white-frame">
 		<div class="header">
-			<h1 class="search-list-title">리뷰글 조회</h1>
+			<h1 class="search-list-title">공지글 조회</h1>
 		</div>
 	
 		<div class="content">
 			<div class="search-filter">
 				<div class="filter-group">
-					<span class="search-list-subject">작성일</span>
+					<span class="search-list-subject">등록일</span>
 					<div class="date-picker">
 						<div class="input-date-box">
 							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" />
@@ -37,15 +35,6 @@
 			</div>
 			<div class="search-bar-group">
 				<div class="search-list-subject">검색어</div>
-				<div class="select-wrap">
-					<select id="searchColumn" class="select">
-						<option value="5">회원ID</option>
-						<option value="3">책 제목</option>
-						<option value="4">ISBN</option>
-						<option value="7">별점</option>
-					</select>
-					<div class="select-arrow-down"></div>
-				</div>
 				
 			    <div class="search-container">
       				<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
@@ -60,9 +49,12 @@
 	<div class="table-container white-frame">
 		<div class="table-total-row">
 			<span id="total-row" class="table-column-head-txt" style="margin-left: 10px;"></span>
-			<button id="delete-button" class="button is-danger" style="float: right; margin-bottom: 16px;">삭제</button>
+			<div style="float: right; margin-bottom: 16px;">
+				<button id="delete-button" class="delete-button">삭제</button>
+				<button class="default-btn" onclick="location.href='/admin/index?path=admin/notice/noticeReg'">등록</button>
+			</div>
 		</div>
-		<table id="reviews" class="table" style="width: 100%">
+		<table id="notice" class="table" style="width: 100%">
 			<thead>
 				<tr>
 					<th>
@@ -70,12 +62,9 @@
 						<label for="select-all"></label>
 					</th>
 					<th>NO</th>
-					<th>내용</th>
-					<th>책 제목</th>
-					<th>ISBN</th>
-					<th>작성자</th>
-					<th>작성일</th>
-					<th>별점</th>
+					<th>공지제목</th>
+					<th>등록일</th>
+					<th>노출여부</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -87,6 +76,6 @@
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="/admin/reviews/js/reviews.js"></script>
+	<script src="/admin/notice/js/notice.js"></script>
 </div>
 </html>
