Feat: 상품페이지 수정, 등록 기능 추가 / 홈페이지 추가 수정중

--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -68,6 +68,10 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     height: 150px;
 }
 
+#input-file {
+    display: none;
+}
+
 .book-info {
     height: 320px;
 }
