--- a/src/main/resources/templates/admin/products/products.html
+++ b/src/main/resources/templates/admin/products/products.html
@@ -71,9 +71,9 @@
 
 <div class="table-container white-frame">
     <div class="table-title-wrap">
-        <h3 class="table-data-cnt-txt">총10건</h3>
+        <h3 class="table-data-cnt-txt" id="totalCount"></h3>
         <div class="button-wrap">
-            <button id="delete-button">삭제</button>
+            <button id="delete-button">목록에서 숨김</button>
             <button class="default-btn" onclick="location.href='/admin/products/addProduct'">등록</button>
         </div>
     </div>
