--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -11,7 +11,7 @@
             <div class="icon-img-wrap">
               <i class="fa-solid fa-house icon-img"></i>
             </div>
-            <p>홈</p>
+            <a href="/admin/index?path=admin/home/home">홈</a>
           </div>
         </div>
       </div>
