--- a/src/main/resources/templates/admin/members/members.html
+++ b/src/main/resources/templates/admin/members/members.html
@@ -3,6 +3,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/admin/members/css/members.css" />
+<link rel="stylesheet" href="/admin/products/css/products.css"/>
+
 <!-- DataPicker -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
