--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -49,11 +49,11 @@
 				<span class="search-list-subject-symbol">@</span>			 				
 				<div class="select-box">
 					<select id="emailDomain" name="emailDomain" onchange="toggleCustomDomain()">
-						<option value="naver.com" >naver.com</option>
-						<option value="gmail.com" >gmail.com</option>
-						<option value="daum.net" >daum.net</option>
-						<option value="yahoo.com" >yahoo.com</option>
-						<option value="custom">직접 입력</option>			
+					    <option value="" disabled selected>도메인 선택</option>
+					    <option th:each="emailDomain : ${emailDomainList}"
+					            th:value="${emailDomain}"
+					            th:text="${emailDomain}">
+					    </option>         
 					</select>
 					<div class="select-arrow-down" id="email"></div>						
 				</div>
@@ -122,7 +122,7 @@
 			
 			<div class="btn">
 				<button type="submit" id="reg-button" class="default-btn" style="margin-right: 20px;" >등록</button>
-				<button class="default-btn cancle" onclick="location.href='/admin/index?path=admin/managers/managers'">
+				<button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/managers/managers'">
 				      <span>뒤로가기</span>
 				</button>
 			</div>
