--- a/src/main/resources/templates/admin/managers/managers.html
+++ b/src/main/resources/templates/admin/managers/managers.html
@@ -2,9 +2,9 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="/admin/members/css/members.css" />
-<link rel="stylesheet" href="/admin/managers/css/managers.css" />
 <link rel="stylesheet" href="/admin/common/css/modal.css" />
+<link rel="stylesheet" href="/admin/products/css/products.css"/>
+<link rel="stylesheet" href="/admin/managers/css/managers.css"/>
 
 
 <!-- DataPicker -->
@@ -12,54 +12,48 @@
 
 <div>
 	<div class="filter-container white-frame">
-		<div class="header">
-			<h1 class="search-list-title">매니저 목록 조회</h1>
+		<h3 class="search-list-title">매니저 목록 조회</h3>
+		<div class="filter-info">
+			<p class="search-list-subject">가입일</p>
+			<div class="filter-wrap date-filter">
+				<div class="date-picker">
+					<div class="input-date-box">
+						<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+							<i class="fa-solid fa-calendar-days"></i>
+					</div>
+					<div class="calendar-slash">-</div>				
+					<div class="input-date-box">
+						<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+						<i class="fa-solid fa-calendar-days"></i>
+					</div>
+				</div>
+				<div class="date-options date-pick-btn">
+					<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
+					<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
+					<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
+					<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
+				</div>
+			</div>			
 		</div>
 
-		<div class="content">
-			<div class="search-filter">
-				<div class="filter-group">
-					<span class="search-list-subject">가입일</span>
-					<div class="date-picker">
-						<div class="input-date-box">
-							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-								<i class="fa-solid fa-calendar-days"></i>
-						</div>
-						<div class="calendar-slash">-</div>
-						
-						<div class="input-date-box">
-							<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-							<i class="fa-solid fa-calendar-days"></i>
-						</div>
+		<div class="filter-info">
+			<p class="search-list-subject">검색어</p>
+				<div class="filter-wrap search-bar">					
+					<div class="select-wrap">
+						<select id="searchColumn" class="select">
+							<option value="3">ID</option>
+							<option value="2">이름</option>
+						</select>	
+						<div class="select-arrow-down"></div>
 					</div>
-					
-					<div class="date-options date-pick-btn">
-						<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
-						<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
-						<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
-						<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
+	
+					<div class="search-container">
+						<input type="text" id="searchKeyword" class="search-input" placeholder="조회할 값을 입력" />
+						<button id="searchButton">
+							<span class="material-symbols-outlined">search</span>
+						</button>
 					</div>
-				</div>
-			</div>
-
-			<div class="search-bar-group">
-				<div class="search-list-subject">검색어</div>
-				<div class="select-wrap">
-					<select id="searchColumn" class="select">
-						<option value="3">ID</option>
-						<option value="2">이름</option>
-					</select>
-
-					<div class="select-arrow-down"></div>
-				</div>
-
-				<div class="search-container">
-					<input type="text" id="searchKeyword" class="searchKeyword search-input" placeholder="조회할 값을 입력" />
-					<button id="searchButton">
-						<span class="material-symbols-outlined">search</span>
-					</button>
-				</div>
-				<button id="reset-button" onclick="resetFilters()">초기화</button>
+					<button id="reset-button" onclick="resetFilters()">초기화</button>
 			</div>
 		</div>
 	</div>
@@ -68,36 +62,38 @@
 	<!-- 이곳에 내가 받을 값들의 컬럼을 적어준다 -->
 	<div class="table-container white-frame">
 	
-		<div class="select-wrap">
-			<span id="total-row" class="table-column-head-txt"></span>	
-
-			<button id="commit-button" class="default-btn" style="float: right;"
-				onclick="location.href='/admin/index?path=admin/managers/managerReg'">등록</button>
-			<button id="change-button" class="default-btn" style="float: right;">변경</button>			
+		<div class="manager-list-wrap">
+			<span id="total-row" class="table-column-head-txt"></span>
 			
-			<select id="searchDept" class="select">
-				<option value="01">물류팀</option>
-				<option value="02">운영팀</option>
-			</select>
-			<div class="select-arrow-down column"></div>
-			
+			<div class="button-wrap-mgr">
+				<div class="select-wrap">
+					<select id="searchDept" class="select">
+						<option value="01">물류팀</option>
+						<option value="02">운영팀</option>
+					</select>
+					<div class="select-arrow-down column"></div>
+				</div>
+				<button id="change-button" class="default-btn cancel">변경</button>
+				<button id="commit-button" class="default-btn"
+					onclick="location.href='/admin/index?path=admin/managers/managerReg'">등록</button>
+			</div>	
 		</div>
 		
-		<table id="manager" class="table is-striped" style="width: 100%">
-			<thead>
-				<tr>
+		<table id="manager" class="table table-center" style="width: 100%">
+			<thead class="table-head">
+				<tr class="table-column-head">
 					<th>
 						<input type="checkbox" id="select-all">
 						<label for="select-all"></label>
 					</th>
-					<th>NO</th>
-					<th>이름</th>
-					<th>아이디</th>
-					<th>이메일</th>
-					<th>부서명</th>
-					<th>전화번호</th>
-					<th>주소</th>
-					<th>가입날짜</th>
+					<th class="table-column-head-txt">NO</th>
+					<th class="table-column-head-txt">이름</th>
+					<th class="table-column-head-txt">아이디</th>
+					<th class="table-column-head-txt">이메일</th>
+					<th class="table-column-head-txt">부서명</th>
+					<th class="table-column-head-txt">전화번호</th>
+					<th class="table-column-head-txt">주소</th>
+					<th class="table-column-head-txt">가입날짜</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
