Refactor : Thymeleaf Layout 적용

--- a/src/main/resources/templates/admin/customer_orders/customerDetail.html
+++ b/src/main/resources/templates/admin/customer_orders/customerDetail.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="www.thymeleaf.org">
-
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 	<link rel="stylesheet" href="/admin/customer_orders/css/detail.css">
 	<!-- Bulma CSS -->
 	<link rel="stylesheet" href="/admin/customer_orders/css/detail.css">
