--- a/src/main/resources/templates/admin/managers/managerDetails.html
+++ b/src/main/resources/templates/admin/managers/managerDetails.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 <link rel="stylesheet" href="/admin/managers/css/managerDetails.css" />
 <div>
 	<div class="white-frame">
@@ -60,7 +64,7 @@
 		</div>
 		
 		<div class="btn">
-			<button class="default-btn cancle" onclick="location.href='/admin/index?path=admin/managers/managers'">
+			<button class="default-btn cancle" onclick="location.href='/admin/managers/managers'">
 			      <span>뒤로가기</span>
 			</button>
 		</div>
