--- a/src/main/resources/templates/common/fragments/config.html
+++ b/src/main/resources/templates/common/fragments/config.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      th:fragment="ConfigFragment">
+      
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
 	<title>BOOKSTORE 관리자</title>
+	
 	<link rel="shortcut icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
 	<link rel="icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
  
@@ -27,24 +30,6 @@
 
 	<!-- 폰트어썸 -->
 	<script src="https://kit.fontawesome.com/d95a86acc3.js"></script>
-	
 </head>
-<body>
-   <div class="inner">
-   
-      <div th:insert="~{admin/sidebar :: sidebar}"></div>
       
-      <div class="content-wrap">
-         <div th:insert="~{admin/header :: header}"></div>
-      
-         <div th:if="${template} != null">
-            <div th:replace="~{${template}}"></div>
-         </div>
-      </div>
-   
-   </div>
-   <script src="/admin/common/js/main.js"></script>
-
-
-</body>
 </html>
