--- a/src/main/resources/templates/admin/home/home.html
+++ b/src/main/resources/templates/admin/home/home.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 <head>
     <meta charset="UTF-8">
     <title>관리자페이지</title>
