--- a/src/main/resources/templates/admin/inventory_log/iventoryLogDetail.html
+++ b/src/main/resources/templates/admin/inventory_log/iventoryLogDetail.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="www.thymeleaf.org">
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
