--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 <link rel="stylesheet" href="/admin/managers/css/managerReg.css" />
 <link rel="stylesheet" href="/admin/common/css/modal.css" />
 
@@ -122,7 +125,7 @@
 			
 			<div class="btn">
 				<button type="submit" id="reg-button" class="default-btn" style="margin-right: 20px;" >등록</button>
-				<button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/managers/managers'">
+				<button class="default-btn cancel" onclick="location.href='/admin/managers/managers'">
 				      <span>뒤로가기</span>
 				</button>
 			</div>
