--- a/src/main/resources/templates/admin/notice/notice.html
+++ b/src/main/resources/templates/admin/notice/notice.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 	<link rel="stylesheet" href="/admin/common/css/modal.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
@@ -51,7 +54,7 @@
 			<span id="total-row" class="table-column-head-txt" style="margin-left: 10px;"></span>
 			<div style="float: right; margin-bottom: 16px;">
 				<button id="delete-button" class="delete-button">삭제</button>
-				<button class="default-btn" onclick="location.href='/admin/index?path=admin/notice/noticeReg'">등록</button>
+				<button class="default-btn" onclick="location.href='/admin/notice/noticeReg'">등록</button>
 			</div>
 		</div>
 		<table id="notice" class="table" style="width: 100%">
