--- a/src/main/resources/templates/admin/notice/noticeDetails.html
+++ b/src/main/resources/templates/admin/notice/noticeDetails.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 <link rel="stylesheet" href="/admin/myinfo/css/myinfo.css" />
 <div>
 	<div class="white-frame">
@@ -53,7 +57,7 @@
 
 		<div class="btn-box">
 			<button type="submit" class="default-btn">수정</button>
-			<button type="button" class="default-btn cancel" onclick="location.href='/admin/index?path=admin/notice/notice'">취소</button>
+			<button type="button" class="default-btn cancel" onclick="location.href='/admin/notice/notice'">취소</button>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
