--- a/src/main/resources/templates/admin/warehouse/warehouseDetail.html
+++ b/src/main/resources/templates/admin/warehouse/warehouseDetail.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{common/layout/defaultlayout}"
+    layout:fragment="Content">
 
 <link rel="stylesheet" href="/admin/managers/css/managerReg.css" />
 <link rel="stylesheet" href="/admin/common/css/modal.css" />
@@ -44,7 +48,7 @@
 			
 			<div class="btn">
 				<button type="submit" id="reg-button" class="default-btn" style="margin-right: 20px;" >수정</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/index?path=/admin/warehouse/warehouse'">
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/warehouse/warehouse'">
 				      <span>뒤로가기</span>
 				</button>
 			</div>
