--- a/src/main/resources/templates/common/fragments/header.html
+++ b/src/main/resources/templates/common/fragments/header.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      th:fragment="HeaderFragment">
 
-<div id="header" th:fragment="header">
+<div id="header">
 	<div class="title-wrap">
 		<p class="header-title">whale books 관리자페이지</p>
 		<p class="clock"></p>
@@ -27,3 +29,4 @@
 	</div>
 </div>
 </html>
+
