Refactor : css 파일수정

--- a/src/main/resources/static/admin/warehouse/css/warehouse.css
+++ b/src/main/resources/static/admin/warehouse/css/warehouse.css
@@ -1,7 +1,6 @@
-#warehouse th {
-    text-align: center;
-}
-
-#warehouse td {
-    text-align: center;
+.warehouse-list-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 20px;
 }
