--- a/src/main/resources/static/admin/customer_orders/css/list.css
+++ b/src/main/resources/static/admin/customer_orders/css/list.css
@@ -1,226 +1,15 @@
-table.dataTable tbody tr {
-    background-color: white !important;
+.filter-info {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border-bottom: 1px solid #c0c0c0;
+    padding-left: 20px;
+    gap: 10px;
 }
 
-td {
-	justify-content: center;
-	align-items: center; 	
-}
-
-.container {
-   display: flex;
-   flex-direction: column;
-   height: 100%; /* 전체 높이 */
-}
-
-.filter_container {
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px 26px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   
-}
-
-.table-container {
-   margin-top : 20px;
-   height: 70%; /* 화면의 하단 70% */
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
-}
-
-.header h1 {
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 24px;
-   color: #000000;
-   margin-bottom: 20px;
-}
-
-.content {
-   display: flex;
-   flex-direction: column;
-   gap: 12px;
-}
-
-.search-filter, .search-bar-group {
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
-}
-
-.filter-group, .search-bar-group {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   gap: 10px;
-   border-bottom: 1px solid #D8D8D8;
-   padding-bottom: 8px;
-}
-
-.label {
-   font-size: 16px;
-   line-height: 24px;
-   color: #000000;
-   margin-left: 40px;
-   margin-right: 60px;
-}
-
-.date-picker {
-   display: flex;
-   flex-direction: row;
-   gap: 10px;
-}
-
-.input-box {
-   display: flex;
-   align-items: center;
-   width: 210px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
-}
-
-.input-box .placeholder {
-   border: none;
-   height: 30px;
-   font-size: 14px;
-   color: #CCCCCC;
-}
-
-.search-bar {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   width: 300px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
-}
-
-.input-group {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   align-items: center;
-}
-
-.input-group input {
-   border: none;
-   outline: none;
-   width: 100%;
-   font-size: 16px;
-   color: #000000;
-}
-
-.calendar-slash {
-   margin-top: 8px;
-}
-
-#reset-button {
-    cursor: pointer;
-}
-
-.stars {
-	font-size: 20px; /* 별 크기 조정 */
-	color: #4777F6;
-}
-
-.empty-stars {
-	font-size: 20px; /* 빈 별 크기 조정 */
-	color: lightgray; /* 빈 별 색상 */
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-/* Center the DataTable pagination controls */
-#reviews_wrapper>.dt-paging {
+.customer-orders-list-wrap {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-}
-
-#member_wrapper>.dt-paging {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.data-count {
-	font-weight: 700;
-    font-size: 16px;
-    color: #000000;
-}
-
-.pagination-list {
-	justify-content: center !important;
-}
-
-.search-bar-radio-group {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 10px;
-	border-bottom: 1px solid #D8D8D8;
-	padding-bottom: 8px;
-	height: 49px;
-}
-
-.filter-container, .filter-container {
-	padding-bottom: 0;
-	margin-bottom: 0;
-}
-
-.reset-button {
-	text-align: right;
-	margin-bottom: 10px;
-    font-weight: 700;
-    font-size: 18px;
-    color: #000000;
-}
-
-.order-detail-link {
-	text-decoration: underline;
-	color: #000000;
-	cursor: pointer;
-}
-
-.text-color-red {
-	color: red !important;
-}
-
-.text-color-green {
-	color: #10A142 !important;
-}
-
-.date-btn.active {
-   border: none;
-   background-color: #4777F6;
-   color: #fff;
-   font-weight: 700;
-}
-
-.dt_data_right { 
-	text-align: right !important; 
-}
-
-.dt_data_text_center {
-	line-height: 30px;
-	text-align: center !important;
-}
-
-.dt-empty {
-	text-align: center !important;
+	margin-bottom: 20px;
 }
