--- a/src/main/resources/static/admin/notice/css/notice.css
+++ b/src/main/resources/static/admin/notice/css/notice.css
@@ -1,11 +1,11 @@
-/* 리스트 스타일 */
-.manager-list-wrap {
+.notice-list-wrap {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 20px;
 }
-.button-wrap-mgr {
+
+.button-wrap-notice {
 	display:flex;
 	align-items: center;
 	justify-content: flex-end;
