--- a/src/main/resources/static/admin/supplier_orders/css/list.css
+++ b/src/main/resources/static/admin/supplier_orders/css/list.css
@@ -1,310 +1,10 @@
-table.dataTable tbody tr {
-    background-color: white !important;
-}
-.container {
-   display: flex;
-   flex-direction: column;
-   height: 100%; /* 전체 높이 */
-}
-
-.filter_container {
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px 26px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.table-container {
-   margin-top : 20px;
-   height: 70%; /* 화면의 하단 70% */
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
-}
-
-.header h1 {
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 24px;
-   color: #000000;
-   margin-bottom: 20px;
-}
-
-.content {
-   display: flex;
-   flex-direction: column;
-   gap: 12px;
-}
-
-.search-filter, .search-bar-group {
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
-}
-
-.filter-group, .search-bar-group {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   gap: 10px;
-   border-bottom: 1px solid #D8D8D8;
-   padding-bottom: 8px;
-}
-
-.label {
-   font-size: 16px;
-   line-height: 24px;
-   color: #000000;
-   margin-left: 40px;
-   margin-right: 60px;
-}
-
-.date-picker {
-   display: flex;
-   flex-direction: row;
-   gap: 10px;
-}
-
-.input-box {
-   display: flex;
-   align-items: center;
-   width: 210px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
-}
-
-.input-box .placeholder {
-   border: none;
-   height: 30px;
-   font-size: 14px;
-   color: #CCCCCC;
-}
-
-.search-bar {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   width: 300px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
-}
-
-.input-group {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   align-items: center;
-}
-
-.input-group input {
-   border: none;
-   outline: none;
-   width: 100%;
-   font-size: 16px;
-   color: #000000;
-}
-
-.calendar-slash {
-   margin-top: 8px;
-}
-
-#reset-button {
-    cursor: pointer;
-}
-
-.stars {
-	font-size: 20px; /* 별 크기 조정 */
-	color: #4777F6;
-}
-
-.empty-stars {
-	font-size: 20px; /* 빈 별 크기 조정 */
-	color: lightgray; /* 빈 별 색상 */
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-/* 모달 스타일 추가 */
-.modal {
-	display: none; /* 초기에는 숨김 */
-	position: fixed;
-	z-index: 1000;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
-}
-
-.modal-content {
-	background-color: #fefefe;
-	margin: 15% auto; /* 상하 좌우 가운데 정렬 */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 30%;
-	border-radius: 8px;
-}
-
-.modal-footer {
+.supplier-orders-list-wrap {
 	display: flex;
-	justify-content: flex-end;
-	padding-top: 10px;
-}
-
-.modal-footer .button {
-	margin-left: 5px;
-}
-
-/* Center the DataTable pagination controls */
-#reviews_wrapper>.dt-paging {
-	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
+	margin-bottom: 20px;
 }
 
-#member_wrapper>.dt-paging {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.data-count {
-	font-weight: 700;
-    font-size: 16px;
-    color: #000000;
-}
-
-.pagination-list {
-	justify-content: center !important;
-}
-
-.search-bar-radio-group {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 10px;
-	border-bottom: 1px solid #D8D8D8;
-	padding-bottom: 8px;
-	height: 49px;
-}
-
-.filter-container, .filter-container {
-	padding-bottom: 0;
-	margin-bottom: 0;
-}
-
-.reset-button {
-	text-align: right;
-	margin-bottom: 10px;
-    font-weight: 700;
-    font-size: 18px;
-    color: #000000;
-}
-
-.order-detail-link {
-	text-decoration: underline;
-	color: #000000;
-}
-
-.text-color-blue {
-	color: #4777F6 !important;
-}
-
-.date-btn.active {
-   border: none;
-   background-color: #4777F6;
-   color: #fff;
-   font-weight: 700;
-}
-
-.dt_data_right { 
-	text-align: right !important; 
-}
-
-.dt_data_text_center {
-	text-align: center !important; 
-}
-
-
-/* 모달 스타일 */
-.modal-area {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* 다른 요소보다 위에 표시 */
-}
-
-.modal-content-area {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 300px;
+table td:not([align]), table th:not([align]) {
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 */
-}
-
-.modal-message-area {
-    margin-bottom: 20px;
-}
-
-.modal-message {
-    font-size: 16px;
-    color: #333;
-}
-
-.modal-btn-area {
-    display: flex;
-    justify-content: space-around;
-}
-
-.modal-check-btn,
-.modal-close-btn {
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100px;
-    text-align: center;
-}
-
-.modal-check-btn {
-    background-color: #007bff;
-    color: white;
-}
-
-.modal-close-btn {
-    background-color: #ccc;
-    color: #333;
-}
-
-.modal-check-btn:hover {
-    background-color: #0056b3;
-}
-
-.modal-close-btn:hover {
-    background-color: #999;
-}
-
-.dt-empty {
-	text-align: center !important;
 }
