--- a/src/main/resources/templates/admin/members/members.html
+++ b/src/main/resources/templates/admin/members/members.html
@@ -1,58 +1,50 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/admin/members/css/members.css" />
-<link rel="stylesheet" href="/admin/products/css/products.css"/>
 
-<!-- DataPicker -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<link rel="stylesheet" href="/admin/common/css/common.css" />
+<link rel="stylesheet" href="/admin/products/css/products.css"/>
+<link rel="stylesheet" href="/admin/members/css/members.css"/>
 
 <div>
 	<div class="filter-container white-frame">
-		<div class="header">
-			<h1 class="search-list-title">회원목록 조회</h1>
-		</div>
-
-		<div class="content">
-			<div class="search-filter">
-				<div class="filter-group">
-					<span class="search-list-subject">가입일</span>
-					<div class="date-picker">
-						<div class="input-date-box">
-							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-								<i class="fa-solid fa-calendar-days"></i>
-						</div>
-						<div class="calendar-slash">-</div>
-						
-						<div class="input-date-box">
-							<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+		<h3 class="search-list-title">회원목록 조회</h3>
+		<div class="filter-info">
+			<p class="search-list-subject">가입일</p>
+			<div class="filter-wrap date-filter">
+				<div class="date-picker">
+					<div class="input-date-box">
+						<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
 							<i class="fa-solid fa-calendar-days"></i>
-						</div>
 					</div>
-					
-					<div class="date-options date-pick-btn">
-						<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
-						<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
-						<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
-						<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
+					<div class="calendar-slash">-</div>					
+					<div class="input-date-box">
+						<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+						<i class="fa-solid fa-calendar-days"></i>
 					</div>
+				</div>				
+				<div class="date-options date-pick-btn">
+					<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
+					<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
+					<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
+					<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
 				</div>
 			</div>
+		</div>
 
-			<div class="search-bar-group">
-				<div class="search-list-subject">검색어</div>
+		<div class="filter-info">
+			<p class="search-list-subject">검색어</p>
+			<div class="filter-wrap search-bar">
 				<div class="select-wrap">
 					<select id="searchColumn" class="select">
 						<option value="1">이름</option>
 						<option value="2">ID</option>
-					</select>
-
+					</select>	
 					<div class="select-arrow-down"></div>
 				</div>
-
+	
 				<div class="search-container">
-					<input type="text" id="searchKeyword" class="searchKeyword search-input" placeholder="조회할 값을 입력" />
+					<input type="text" id="searchKeyword" class="search-input" placeholder="조회할 값을 입력" />
 					<button id="searchButton">
 						<span class="material-symbols-outlined">search</span>
 					</button>
@@ -65,17 +57,18 @@
 
 	<!-- 이곳에 내가 받을 값들의 컬럼을 적어준다 -->
 	<div class="table-container white-frame">
-		<span id="total-row" class="table-column-head-txt"></span>
-		<div><br></div>
-		<table id="member" class="table is-striped" style="width: 100%">
-			<thead>
-				<tr>
-					<th>NO</th>
-					<th>이름</th>
-					<th>ID</th>
-					<th>EMAIL</th>
-					<th>전화번호</th>
-					<th>가입날짜</th>
+		<div class="member-list-wrap">
+			<h3 id="total-row" class="table-data-cnt-txt"></h3>
+		</div>
+		<table id="member" class="table table-center" style="width: 100%">
+			<thead class="table-head">			
+				<tr class="table-column-head">
+					<th class="table-column-head-txt">NO</th>
+					<th class="table-column-head-txt">이름</th>
+					<th class="table-column-head-txt">ID</th>
+					<th class="table-column-head-txt">EMAIL</th>
+					<th class="table-column-head-txt">전화번호</th>
+					<th class="table-column-head-txt">가입날짜</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
