--- a/src/main/resources/templates/admin/notice/notice.html
+++ b/src/main/resources/templates/admin/notice/notice.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
-	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
-	<link rel="stylesheet" href="/admin/common/css/modal.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+	<link rel="stylesheet" href="/admin/products/css/products.css"/>
+	<link rel="stylesheet" href="/admin/notice/css/notice.css"/>
+	
 <div>
 	<div class="filter-container white-frame">
-		<div class="header">
-			<h1 class="search-list-title">공지글 조회</h1>
-		</div>
-	
-		<div class="content">
-			<div class="search-filter">
-				<div class="filter-group">
-					<span class="search-list-subject">등록일</span>
+		<h3 class="search-list-title">공지글 조회</h3>
+		<div class="search-filter">
+		
+			<div class="filter-info">
+				<p class="search-list-subject">등록일</p>
+				<div class="filter-wrap date-filter">
+				
 					<div class="date-picker">
 						<div class="input-date-box">
 							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" />
@@ -33,42 +31,44 @@
 					</div>
 				</div>
 			</div>
-			<div class="search-bar-group">
-				<div class="search-list-subject">검색어</div>
-				
-			    <div class="search-container">
-      				<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
-      				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
-    			</div>
-
-				<button id="reset-button" onclick="resetFilters()">초기화</button>			
+		
+			<div class="filter-info">
+				<p class="search-list-subject">검색어</p>
+				<div class="filter-wrap search-bar">								
+				    <div class="search-container">
+		     				<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
+		     				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
+		   			</div>
+					<button id="reset-button" onclick="resetFilters()">초기화</button>			
+				</div>
 			</div>
-		</div>
-	</div>
+		</div>	
 
-	<div class="table-container white-frame">
-		<div class="table-total-row">
-			<span id="total-row" class="table-column-head-txt" style="margin-left: 10px;"></span>
-			<div style="float: right; margin-bottom: 16px;">
-				<button id="delete-button" class="delete-button">삭제</button>
-				<button class="default-btn" onclick="location.href='/admin/index?path=admin/notice/noticeReg'">등록</button>
+		<div class="table-container white-frame">
+			<div class="notice-list-wrap">		
+				<h3 id="total-row" class="table-data-cnt-txt"></h3>
+				<div class="button-wrap-notice">				
+					<button id="delete-button" class="delete-button">삭제</button>
+					<button class="default-btn" onclick="location.href='/admin/index?path=admin/notice/noticeReg'">등록</button>
+				</div>
 			</div>
+			
+			<table id="notice" class="table table-center" style="width: 100%">
+				<thead class="table-head">
+					<tr class="table-column-head">
+						<th>
+							<input type="checkbox" id="select-all">
+							<label for="select-all"></label>
+						</th>
+						<th class="table-column-head-txt">NO</th>
+						<th class="table-column-head-txt">공지제목</th>
+						<th class="table-column-head-txt">등록일</th>
+						<th class="table-column-head-txt">노출여부</th>
+					</tr>
+				</thead>
+				<tbody></tbody>
+			</table>
 		</div>
-		<table id="notice" class="table" style="width: 100%">
-			<thead>
-				<tr>
-					<th>
-						<input type="checkbox" id="select-all">
-						<label for="select-all"></label>
-					</th>
-					<th>NO</th>
-					<th>공지제목</th>
-					<th>등록일</th>
-					<th>노출여부</th>
-				</tr>
-			</thead>
-			<tbody></tbody>
-		</table>
 	</div>
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
