--- a/src/main/resources/templates/admin/warehouse/warehouse.html
+++ b/src/main/resources/templates/admin/warehouse/warehouse.html
@@ -2,46 +2,40 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/admin/members/css/members.css" />
-<link rel="stylesheet" href="/admin/managers/css/managers.css" />
+
 <link rel="stylesheet" href="/admin/common/css/modal.css" />
-<link rel="stylesheet" href="/admin/warehouse/css/warehouse.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<link rel="stylesheet" href="/admin/products/css/products.css"/>
+<link rel="stylesheet" href="/admin/warehouse/css/warehouse.css"/>
 
 <div>
 	<div class="filter-container white-frame">
-		<div class="header">
-			<h1 class="search-list-title">창고재고조회</h1>
-		</div>
-
-		<div class="content">
-			<div class="search-filter">
-				<div class="filter-group">
-					<span class="search-list-subject">발주일</span>
-					<div class="date-picker">
-						<div class="input-date-box">
-							<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-								<i class="fa-solid fa-calendar-days"></i>
-						</div>
-						<div class="calendar-slash">-</div>
-						
-						<div class="input-date-box">
-							<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-							<i class="fa-solid fa-calendar-days"></i>
-						</div>
+		<h3 class="search-list-title">창고재고조회</h3>
+		<div class="filter-info">
+			<p class="search-list-subject">발주일</p>
+			<div class="filter-wrap date-filter">				
+				<div class="date-picker">
+					<div class="input-date-box">
+						<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+						<i class="fa-solid fa-calendar-days"></i>
 					</div>
-					
-					<div class="date-options date-pick-btn">
-						<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
-						<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
-						<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
-						<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
+					<div class="calendar-slash">-</div>						
+					<div class="input-date-box">
+						<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+						<i class="fa-solid fa-calendar-days"></i>
 					</div>
+				</div>					
+				<div class="date-options date-pick-btn">
+					<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
+					<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
+					<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
+					<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
 				</div>
 			</div>
+		</div>
 
-			<div class="search-bar-group">
-				<div class="search-list-subject">검색어</div>
+		<div class="filter-info">
+			<p class="search-list-subject">검색어</p>
+			<div class="filter-wrap search-bar">				
 				<div class="select-wrap">
 					<select id="searchColumn" class="select">
 						<option value="1">ISBN</option>
@@ -50,7 +44,6 @@
 
 					<div class="select-arrow-down"></div>
 				</div>
-
 				<div class="search-container">
 					<input type="text" id="searchKeyword" class="searchKeyword search-input" placeholder="조회할 값을 입력" />
 					<button id="searchButton">
@@ -64,16 +57,20 @@
 
 
 	<!-- 이곳에 내가 받을 값들의 컬럼을 적어준다 -->
-	<div class="table-container white-frame">		
-		<table id="warehouse" class="table is-striped" style="width: 100%">
-			<thead>
-				<tr>
-					<th>NO</th>
-					<th>ISBN</th>
-					<th>책제목</th>
-					<th>수량</th>
-					<th>입고날짜</th>
-					<th>구역번호</th>
+	<div class="table-container white-frame">	
+		<div class="warehouse-list-wrap">
+			<h3 id="total-row" class="table-data-cnt-txt"></h3>
+		</div>
+			
+		<table id="warehouse" class="table table-center" style="width: 100%">
+			<thead class="table-head">
+				<tr class="table-column-head">
+					<th class="table-column-head-txt">NO</th>
+					<th class="table-column-head-txt">ISBN</th>
+					<th class="table-column-head-txt">책제목</th>
+					<th class="table-column-head-txt">수량</th>
+					<th class="table-column-head-txt">입고날짜</th>
+					<th class="table-column-head-txt">구역번호</th>
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -82,8 +79,7 @@
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
-	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>
-	
+	<script src="https://cdn.datatables.net/2.1.4/js/dataTables.bulma.js"></script>	
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 	<script src="/admin/warehouse/js/warehouse.js"></script>
 	
