--- a/src/main/resources/static/admin/home/css/home.css
+++ b/src/main/resources/static/admin/home/css/home.css
@@ -18,6 +18,7 @@
     border-radius: 20px;
     padding: 30px 25px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .txt-wrap > p:nth-child(1) {
