--- a/src/main/resources/templates/admin/home/home.html
+++ b/src/main/resources/templates/admin/home/home.html
@@ -8,28 +8,28 @@
 </head>
 <body>
 <div class="dashboard-header">
-    <div class="info-wrap">
+    <div class="info-wrap" onclick="location.href='/admin/index?path=admin/members/members'">
         <div class="member-cnt txt-wrap">
             <p>회원수</p>
-            <p>100</p>
+            <p>[[${memberCnt}]]</p>
         </div>
         <i class="fa-solid fa-users"></i>
     </div>
-    <div class="info-wrap">
+    <div class="info-wrap" onclick="location.href='/admin/index?path=admin/products/products'">
         <div class="items-cnt txt-wrap">
             <p>판매중인상품</p>
-            <p>100</p>
+            <p>[[${productCnt}]]</p>
         </div>
         <i class="fa-solid fa-book"></i>
     </div>
-    <div class="info-wrap">
+    <div class="info-wrap" onclick="location.href='/admin/index?path=admin/customer_orders/customerList'">
         <div class="orders-cnt txt-wrap">
             <p>오늘 주문건</p>
-            <p>100</p>
+            <p>[[${orderCnt}]]</p>
         </div>
         <i class="fa-solid fa-clipboard-list"></i>
     </div>
-    <div class="info-wrap">
+    <div class="info-wrap" onclick="location.href='/admin/index?path=admin/customer_orders/customerList'">
         <div class="sales-cnt txt-wrap">
             <p>오늘 매출</p>
             <p>500,000</p>
@@ -46,7 +46,7 @@
                 <img src="/admin/home/imgs/order-list-icon.svg" alt="주문건수" class="img-icon"/>
             </div>
             <p>주문</p>
-            <p>10</p>
+            <p>[[${allOrderCnt}]]</p>
         </div>
         <div class="arrow">
             <img src="/admin/home/imgs/dashboard-status-arrow.svg" alt="화살표"/>
@@ -56,7 +56,7 @@
                 <img src="/admin/home/imgs/deliver-icon.svg" alt="배송중건수" class="img-icon"/>
             </div>
             <p>배송중</p>
-            <p>10</p>
+            <p>[[${allDelivering}]]</p>
         </div>
         <div class="arrow">
             <img src="/admin/home/imgs/dashboard-status-arrow.svg" alt="화살표"/>
@@ -66,7 +66,7 @@
                 <img src="/admin/home/imgs/complete-deliver.svg" alt="배송완료건수" class="img-icon"/>
             </div>
             <p>배송완료</p>
-            <p>10</p>
+            <p>[[${allCompleted}]]</p>
         </div>
     </div>
 </div>
